tests/bug_detector_tests/shadowingVariable5.test
################################################################################
#    Copyright (c) 2013, KAIST.
#    All rights reserved.
#
#    Use is subject to license terms.
#
#    This distribution may include materials developed by third parties.
################################################################################
tests=shadowingVariable5
BUGDETECTOR_TESTS_DIR=${JS_HOME}/tests/bug_detector_tests
bug-detector
bug-detector_out_WCIequals=\
 \n\
* Bug Detector * \n\
shadowingVariable5.js:7:15~7:18: [TypeError] Calling the non-function 'h' as a function. \n\
shadowingVariable5.js:2:12~2:13: [Warning] Parameter 'g' is shadowed by a function at '3:3-8:3'. \n\
shadowingVariable5.js:2:15~2:16: [Warning] Parameter 'h' is shadowed by a variable at '4:9-14'. \n\
shadowingVariable5.js:2:15~2:16: [Warning] Parameter 'h' is shadowed by a function at '5:5-7:5'. \n\
shadowingVariable5.js:3:14~3:15: [Warning] Parameter 'h' is shadowed by a variable at '4:9-14'. \n\
shadowingVariable5.js:3:14~3:15: [Warning] Parameter 'h' is shadowed by a function at '5:5-7:5'. \n\
shadowingVariable5.js:4:9~4:14: [Warning] Variable 'h' is shadowed by a function at '5:5-7:5'. \n\
shadowingVariable5.js:7:15~7:16: [Warning] Trying to convert primitive value(number) to object. \n\
 \n\
============== Total Count ============== \n\
|  RangeErrors       :      0 (  0.00%) | \n\
|  ReferenceErrors   :      0 (  0.00%) | \n\
|  SyntaxErrors      :      0 (  0.00%) | \n\
|  TypeErrors        :      1 ( 12.50%) | \n\
|  URIErrors         :      0 (  0.00%) | \n\
|  Warnings          :      7 ( 87.50%) | \n\
========================================= \n\
============ Statistics ============= \n\
|  AbsentRead              :      0 | \n\
|  BinaryOperator          :      0 | \n\
|  BuiltinTypeError        :      0 | \n\
|  BuiltinWrongArgType     :      0 | \n\
|  CallConstFunc           :      0 | \n\
|  CallNonConstructor      :      0 | \n\
|  CallNonFunction         :      1 | \n\
|  ConditionalBranch       :      0 | \n\
|  ConvertToNumber         :      0 | \n\
|  DefaultValue            :      0 | \n\
|  Deprecated              :      0 | \n\
|  FunctionArgSize         :      0 | \n\
|  GlobalThis              :      0 | \n\
|  ImplicitTypeConversion  :      0 | \n\
|  AccessingNullOrUndef    :      0 | \n\
|  PrimitiveToObject       :      1 | \n\
|  RangeError              :      0 | \n\
|  Shadowing               :      6 | \n\
|  StrictMode              :      0 | \n\
|  UncalledFunction        :      0 | \n\
|  UnreachableCode         :      0 | \n\
|  ValueNeverRead          :      0 | \n\
|  VaryingTypeArguments    :      0 | \n\
|  WrongThisType           :      0 | \n\
|  RegularExpression       :      0 | \n\
|  WrongArgument           :      0 | \n\
===================================== \n\
\n
bug-detector_err_equals=
