tests/bug_detector_tests/shadowingVariable5.js
var g = 2, h = 3;
function f(g, h) {
  function g(h) {
    var h = 4;
    function h() {
      return h;
    }; return h();
  }; 
  return g(g);
};f(g, h);
